fix(tag):  disabled Missing border color

--- a/style/web/components/tag/_index.less
+++ b/style/web/components/tag/_index.less
@@ -57,6 +57,7 @@
     &.@{prefix}-tag--disabled {
       color: @tag-disabled-color;
       background-color: @tag-disabled-bg;
+      border-color: @component-border;
       cursor: not-allowed;
 
       &:hover {
